@@ -285,8 +285,8 @@ module StateMachine
       # state value actually changed
       def write(object, attribute, value)
         result = super
-        if attribute == :state && object.respond_to?("#{attribute}_will_change!") && !object.send("#{attribute}_changed?")
-          object.send("#{attribute}_will_change!")
+        if attribute == :state && object.respond_to?("#{self.attribute}_will_change!") && !object.send("#{self.attribute}_changed?")
+          object.send("#{self.attribute}_will_change!")
         end
         result
       end
