@@ -523,6 +523,60 @@ begin
           assert_equal %w(parked parked), @record.changes['state']
         end
       end
+      
+      class MachineWithDirtyAttributesAndCustomAttributeTest < BaseTestCase
+        def setup
+          @model = new_model do
+            connection.add_column :foo, :status, :string, :default => 'idling'
+          end
+          @machine = StateMachine::Machine.new(@model, :status, :initial => :parked)
+          @machine.event :ignite
+          @machine.state :idling
+          
+          @record = @model.create
+          
+          @transition = StateMachine::Transition.new(@record, @machine, :ignite, :parked, :idling)
+          @transition.perform(false)
+        end
+        
+        def test_should_include_state_in_changed_attributes
+          assert_equal %w(status), @record.changed
+        end
+        
+        def test_should_track_attribute_change
+          assert_equal %w(parked idling), @record.changes['status']
+        end
+        
+        def test_should_not_reset_changes_on_multiple_transitions
+          transition = StateMachine::Transition.new(@record, @machine, :ignite, :idling, :idling)
+          transition.perform(false)
+          
+          assert_equal %w(parked idling), @record.changes['status']
+        end
+      end
+      
+      class MachineWithDirtyAttributeAndCustomAttributesDuringLoopbackTest < BaseTestCase
+        def setup
+          @model = new_model do
+            connection.add_column :foo, :status, :string, :default => 'idling'
+          end
+          @machine = StateMachine::Machine.new(@model, :status, :initial => :parked)
+          @machine.event :park
+          
+          @record = @model.create
+          
+          @transition = StateMachine::Transition.new(@record, @machine, :park, :parked, :parked)
+          @transition.perform(false)
+        end
+        
+        def test_should_include_state_in_changed_attributes
+          assert_equal %w(status), @record.changed
+        end
+        
+        def test_should_track_attribute_changes
+          assert_equal %w(parked parked), @record.changes['status']
+        end
+      end
     end
     
     class MachineWithoutTransactionsTest < BaseTestCase
